--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,87 @@
  *= require_tree .
  *= require_self
  */
+body {
+	color: #2a445e;
+
+	background: linear-gradient(to right, rgba(255,0,0,.2), rgba(142,166,206,1))
+}
+
+h1,h4{
+	text-align: center;
+}
+a {
+	color: #808284;
+	text-decoration: none;
+}
+.main {
+	margin: 0 auto;
+	padding: 30px;
+	height: 660px;
+	max-width: 860px;
+	background-color: #e3eaf4;
+}
+.homelink {
+	margin: 10px;	
+	padding-top: 10px;
+	text-align: right;
+}
+.newlink {
+	text-align: right;
+}
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
